Added Demo 5 Data Grid  inline editing

--- a/angcellar/web-app/index.html
+++ b/angcellar/web-app/index.html
@@ -36,5 +36,14 @@ Resource files within the Grails application.
 <br/>
 <hr/>
 
+<h2>Demo 5</h2>
+This is a new variation which allows for a datagrid or table inline editing, searching and sorting
+of a list of records.  The sorting is rudimentary (by clicking on the column headers) to sort
+the records in ascending order of the column value. Also, the changes performed will not be
+saved until the Save button is clicked.
+<a href="test5.html">Demo 5</a>
+<br/>
+<hr/>
+
 </body>
 </html>
